# JAT-AI

./: .env.example  .gitignore  README.md  _check_repo.py  config.example.json  pyproject.toml
.github/workflows/: ci.yml
dashboard/: OCTOGENT_ADAPTATION.md  api-mock.mjs  dead-code-audit.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
dashboard/src/: App.tsx  styles.css
dryrun/: mocks.py  run_all.py  test_auto_mode.py  test_e2e_simulation.py  test_full_workflow.py  test_gaps.py  test_jdocs.py
examples/: seed_dashboard.py  workflow_parallel.json
prompts/: agent_session.md  anti_patterns.md  anti_patterns.xml  context.md  context.xml  decomposition.md  environment.md  environment.xml  gates.md  gates.xml  new_prompt_template.xml  planning_session.md  planning_session.xml  review_session.md  review_session.xml  rules.md  rules.xml  xml_agent_template.xml  xml_decomposition_template.xml
scripts/: install.bat  install.sh  jai.bat  jai.sh  jat.bat  jat.sh
src/: cli.py  cli_ai.py  config.py  db.py  exceptions.py  server_launcher.py
src/api/: chat.py  conversations.py  execute.py  github.py  jules_accounts.py  plans.py  providers.py  repos.py  server.py  settings.py  usage.py
src/clients/: __init__.py  ai_providers.py  database.py  github.py  jules.py  local_db.py
src/core/: __init__.py  account_pool.py  adaptive_context.py  ai_interface.py  auto_merge.py  auto_mode.py  config_loader.py  (+20 more)
supabase/: 001_initial_schema.sql  002_context_and_merge.sql  schema.sql
ui/: index.html  package.json  tsconfig.json  vite.config.ts
(+90 files in other folders)
