[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jat"
version = "0.1.0"
description = "Distributed orchestrator for Google Jules AI coding agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "tenacity==9.1.2",
    "structlog==25.4.0",
    "mcp==1.9.3",
    "python-dotenv==1.1.0",
    "supabase==2.15.2",
    "cryptography==44.0.3",
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.1.1",
    "respx==0.22.0",
    "ruff==0.11.12",
    "mypy==1.16.0",
]

[project.scripts]
jat = "src.server_launcher:main"
jat-cli = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["src"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
